# yarp-device-ethercat-cia402

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci_conda.yml
CiA402MotionControl/: CMakeLists.txt  CiA402MotionControl.cpp  CiA402MotionControl.h  CiA402StateMachine.cpp  CiA402StateMachine.h  EthercatManager.cpp  EthercatManager.h
Cia402MotionControl/: PDO.h
Ds402MotionControl/: CMakeLists.txt  Cia402StateMachine.cpp  Cia402StateMachine.h  Ds402MotionControl.cpp  Ds402MotionControl.h  EthercatManager.cpp  EthercatManager.h
cmake/: AddApplication.cmake  AddLibrary.cmake  AddYARPDevice.cmake
config/robot/adj8/: config.xml
config/robot/adj8/motion_control/: all_joint_mc.xml  all_joint_mc_nws.xml
config/robot/template_1_motor/: config.xml
config/robot/template_1_motor/motion_control/: all_joint_mc.xml  all_joint_mc_nws.xml
config/robot/testbench/: config.xml
config/robot/testbench/motion_control/: all_joint_mc_nws.xml
device/: CMakeLists.txt
device/CiA402MotionControl/: CMakeLists.txt  CiA402MotionControl.cpp  CiA402MotionControl.h  CiA402StateMachine.h  RealTimePeriodicThread.cpp  RealTimePeriodicThread.h
doc/: dual_encoder_handling.md  modes_and_setpoints.md  protocol_map.md
src/: CMakeLists.txt
src/CiA402/: CMakeLists.txt
src/CiA402/include/CiA402/: EthercatManager.h  LogComponent.h
src/CiA402/src/: EthercatManager.cpp
test/: .gitignore  CMakeLists.txt  README.md  main.cpp
test/HardwareInTheLoopTest/: CMakeLists.txt  HardwareInTheLoopTest.cpp  README.md  test_config.xml
test/conifg/robot/adj8/: ds402_motion_control.ini
test/unit_tests/: mock_yarp_vocabs.h  test_control_modes.cpp  test_main.cpp
test_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test_build/Testing/Temporary/: CTestCostData.txt
utils/: CMakeLists.txt
utils/StoreHomePosition/: CMakeLists.txt  README.md
utils/StoreHomePosition/include/StoreHomePosition/: StoreHomePosition.h
utils/StoreHomePosition/src/: StoreHomePosition.cpp  main.cpp
